--- a/first_web/templates/main.html
+++ b/first_web/templates/main.html
@@ -5,6 +5,7 @@
     <meta charset="UTF-8" />
     <script src="https://cdn.jsdelivr.net/npm/chart.js" defer ></script>
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.4.0/css/all.min.css" integrity="sha512-iecdLmaskl7CVkqkXNQ/ZH/XLlvWZOJyj7Yy7tcenmpD1ypASozpmT/E0iPtmFIB46ZmdtAc9eNBvH0H/ZpiBw==" crossorigin="anonymous" referrerpolicy="no-referrer" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>{% block title %}home{% endblock %}</title>
   </head>
