--- a/first_web/accounts/templates/accounts/link.html
+++ b/first_web/accounts/templates/accounts/link.html
@@ -1,2 +1,2 @@
-<p>link sended to your email</p>
+link sended to your email
 {{protocol}}://{{domain}}{% url 'accounts:password_reset_confirm'  uidb64=uid  token=token %} 
