--- a/first_web/home/static/product.css
+++ b/first_web/home/static/product.css
@@ -1,17 +1,19 @@
-.wrapper{
+.wrapper {
     position: relative;
     width: 15rem;
-    background-color: #ffffff;
+    /* background-color: #ffffff; */
     padding: 50px 40px 20px 40px;
     border-radius: 10px;
 }
-.containere{
+
+.containere {
     position: relative;
     width: 100%;
     height: 100px;
     margin-top: .2rem;
 }
-input[type="range"]{
+
+input[type="range"] {
     -webkit-appearance: none;
     -moz-appearance: none;
     appearance: none;
@@ -24,7 +26,8 @@ input[type="range"]{
     background-color: transparent;
     pointer-events: none;
 }
-.slider-track{
+
+.slider-track {
     width: 100%;
     height: 5px;
     position: absolute;
@@ -33,55 +36,70 @@ input[type="range"]{
     bottom: 0;
     border-radius: 5px;
 }
-input[type="range"]::-webkit-slider-runnable-track{
+.slider-track2 {
+    width: 100%;
+    height: 5px;
+    position: absolute;
+    margin: auto;
+    top: 0px;
+    bottom: 0;
+    border-radius: 5px;
+}
+input[type="range"]::-webkit-slider-runnable-track {
     -webkit-appearance: none;
     height: 5px;
 }
-input[type="range"]::-moz-range-track{
+
+input[type="range"]::-moz-range-track {
     -moz-appearance: none;
     height: 5px;
 }
-input[type="range"]::-ms-track{
+
+input[type="range"]::-ms-track {
     appearance: none;
     height: 5px;
 }
-input[type="range"]::-webkit-slider-thumb{
+
+input[type="range"]::-webkit-slider-thumb {
     -webkit-appearance: none;
     height: 1.7em;
     width: 1.7em;
-    background-color: #3264fe;
+    background-color: #000000;
     cursor: pointer;
     margin-top: -9px;
     pointer-events: auto;
     border-radius: 50%;
 }
-input[type="range"]::-moz-range-thumb{
+
+input[type="range"]::-moz-range-thumb {
     -webkit-appearance: none;
     height: 1.7em;
     width: 1.7em;
     cursor: pointer;
     border-radius: 50%;
-    background-color: #3264fe;
+    background-color: #000000;
     pointer-events: auto;
 }
-input[type="range"]::-ms-thumb{
+
+input[type="range"]::-ms-thumb {
     appearance: none;
     height: 1.7em;
     width: 1.7em;
     cursor: pointer;
     border-radius: 50%;
-    background-color: #3264fe;
+    background-color: #000000;
     pointer-events: auto;
 }
-input[type="range"]:active::-webkit-slider-thumb{
+
+input[type="range"]:active::-webkit-slider-thumb {
     background-color: #ffffff;
-    border: 3px solid #3264fe;
+    border: 3px solid #000000;
 }
-.values{
-    background-color: #3264fe;
+
+.values {
+    background-color: #000000;
     width: 10rem;
     position: relative;
-    /* margin: auto; */
     padding: 10px 0;
     border-radius: 5px;
     text-align: center;
@@ -89,12 +107,13 @@ input[type="range"]:active::-webkit-slider-thumb{
     font-size: 1rem;
     color: #ffffff;
 }
-.values:before{
+
+.values:before {
     content: "";
     position: absolute;
     height: 0;
     width: 0;
-    border-top: 15px solid #3264fe;
+    border-top: 15px solid #000000;
     border-left: 15px solid transparent;
     border-right: 15px solid transparent;
     margin: auto;
@@ -102,6 +121,71 @@ input[type="range"]:active::-webkit-slider-thumb{
     left: 0;
     right: 0;
 }
-#id_brand,#id_color,#id_size{
-    margin-left: 1rem;
+label>input{
+    cursor:pointer
+}
+a{
+    text-decoration:none!important;
+    color:inherit!important;
+}
+@media screen and (max-width:991px){
+    input[type="submit"]{
+        border: 0;
+        background-color: white;
+        padding: 1rem 0;
+        border-bottom: 1px solid rgba(0, 0, 0, 0.1);
+        display: block;
+        width: 100%;
+        text-align: start;
+        padding-left:1rem;
+    }
+    input[type="submit"]:hover{
+        background-color:rgb(224, 224, 224)!important;
+    }
+    #id_brand,
+    #id_color{
+    width:100%;
+    display: grid;
+    grid-template-columns: repeat(3,35vw);
+    justify-items:space-between;
+    padding: 20px 0;
+    margin:0;
+    row-gap: 10px;
+}
+}
+@media screen and (min-width:992px){
+    input[type="submit"]{
+        background-color: white;
+        border:0
+    }
+    #id_brand,
+    #id_color{
+    display: grid;
+    grid-template-columns: repeat(2,10vw);
+    justify-items:space-between;
+    padding: 20px 0;
+    margin:0;
+    row-gap: 10px;
+
+}
+#id_search{
+    width:15vw
+}
+}
+.category-container:first-child{
+    border-right : 1px solid rgba(0, 0, 0, 0.1);
+}
+.sub-category:hover{
+background-color:rgb(224, 224, 224)!important;
+}
+
+label[for = "id_search"]{
+    display:none;
+}
+#id_search{
+    outline:0;
+    border-radius:.5rem;
+    padding: .35rem 0;
+    padding-left: .4rem;
+    border:1px solid black
 }
