--- a/first_web/home/templates/product.html
+++ b/first_web/home/templates/product.html
@@ -1,4 +1,4 @@
-{% extends 'main.html' %} {% block title %}product{% endblock %}{% load static%}
+{% extends 'main.html' %} {% block title %}product{% endblock %}{% load static%}{% load home_test  %}
 {% block body%}
 <link rel="stylesheet" href="{% static 'product.css' %}" />
 <body style="background-color: white">
@@ -136,33 +136,33 @@
       <ul class="pagination">
         {% if products.has_previous %}
         <li class="page-item">
-          <a class="page-link" href="?page={{products.previous_page_number}}&{{data}}"
+          <a class="page-link" href="{% filter_url products.previous_page_number 'page' request.GET.urlencode %}"
             >Previous</a
           >
         </li>
         <li class="page-item">
-          <a class="page-link" href="?page={{products.previous_page_number}}&{{data}}"
+          <a class="page-link" href="{% filter_url products.previous_page_number 'page' request.GET.urlencode %}"
             >{{products.previous_page_number}}</a
           >
         </li>
         {% else %}
         <li class="page-item disabled">
-          <a class="page-link" href="">Previous</a>
+          <a class="page-link" href="">Previous</a>products.number
         </li>
         {% endif %}
         <li class="page-item {% if page_num == page_num %} active {% endif %}">
-          <a class="page-link" href="?page={{products.number}}&{{data}}"
+          <a class="page-link" href="{% filter_url products.number 'page' request.GET.urlencode %}"
             >{{products.number}}</a
           >
         </li>
         {% if products.has_next %}
         <li class="page-item">
-          <a class="page-link" href="?page={{products.next_page_number}}&{{data}}"
+          <a class="page-link" href="{% filter_url products.next_page_number 'page' request.GET.urlencode %}"
             >{{products.next_page_number}}</a
           >
         </li>
         <li class="page-item">
-          <a class="page-link" href="?page={{products.next_page_number}}&{{data}}">next</a>
+          <a class="page-link" href="{% filter_url products.next_page_number 'page' request.GET.urlencode %}">next</a>
         </li>
         {% else %}
         <li class="page-item disabled"><a class="page-link" href="">next</a></li>
