--- a/first_web/home/templates/home.html
+++ b/first_web/home/templates/home.html
@@ -1,6 +1,34 @@
-{% extends 'main.html' %} {% block title %}home{% endblock %} {% block body %}
-<body style="background-color: white">
-  <div
+{% extends 'main.html' %} {% load static %}  {% block title %}home{% endblock %} {% block body %}
+<body>
+    <div style="height: 80vh;" class="d-flex justify-content-center align-items-end">
+  <div id="carouselExampleCaptions" class="carousel slide" style="width: 80vw;height: 70vh;">
+    <div class="carousel-indicators">
+      <button type="button" data-bs-target="#carouselExampleCaptions" data-bs-slide-to="0" class="active" aria-current="true" aria-label="Slide 1"></button>
+      <button type="button" data-bs-target="#carouselExampleCaptions" data-bs-slide-to="1" aria-label="Slide 2"></button>
+    </div>
+    <div class="carousel-inner">
+      {% for cat in category %}
+      <div class="carousel-item">
+        <a href="{{cat.get_absolute_url}}">
+        <img src="{{ cat.image.url }}" class="rounded-2" style="width: 80vw;height: 70vh;border: 1px solid black;" alt="category">
+        <div class="carousel-caption">
+          <h5>{{cat.name}}</h5>
+        </div>
+      </a>
+      </div>
+    {% endfor %}
+    </div>
+    <button class="carousel-control-prev" type="button" data-bs-target="#carouselExampleCaptions" data-bs-slide="prev">
+      <span class="carousel-control-prev-icon" aria-hidden="true"></span>
+      <span class="visually-hidden">Previous</span>
+    </button>
+    <button class="carousel-control-next" type="button" data-bs-target="#carouselExampleCaptions" data-bs-slide="next">
+      <span class="carousel-control-next-icon" aria-hidden="true"></span>
+      <span class="visually-hidden">Next</span>
+    </button>
+  </div>  
+</div>
+  {% comment %} <div
     style="
       font-family: sans-serif;
       color: black;
@@ -23,6 +51,8 @@
       />
     </a>
     {% endfor %}
-  </div>
+  </div> {% endcomment %}
+<script src="{% static 'home.js' %}"></script>
+
 </body>
 {% endblock %}
