--- a/first_web/templates/main.html
+++ b/first_web/templates/main.html
@@ -45,9 +45,14 @@
               >sign in</a
             >
             {% endif %}
-            <a class="nav-link text-light" href="{% url 'accounts:profile' %}">profile</a>
+            <a class="nav-link text-light" href="{% url 'accounts:profile' %}"><img
+              src="{{request.user.profile.profile_image.url}}"
+              alt=""
+              style="width: 3rem; height: 3rem; border: 1px solid black"
+              class="rounded-circle img-fluid"
+            /></a>
             <a class="nav-link text-light" href="{% url 'cart:cart_detail' %}">cart</a>
-            <a class="nav-link text-light" href="{% url 'home:contact' %}">contact us</a>
+            {% comment %} <a class="nav-link text-light" href="{% url 'home:contact' %}">contact us</a> {% endcomment %}
           </div>
         </div>
       </div>
