--- a/first_web/home/templates/detail.html
+++ b/first_web/home/templates/detail.html
@@ -398,7 +398,7 @@
       </h2>
       <div id="flush-collapseOne" class="accordion-collapse collapse" aria-labelledby="flush-headingOne" data-bs-parent="#accordionFlushExample">
         <div class="accordion-body">
-          <div class="d-flex col-10 offset-1 border rounded-2" id="scrollbar1" style="overflow-y: hidden;">
+          <div class="d-flex border rounded-2" id="scrollbar1" style="overflow-y: hidden;">
           {% for tag in similar %}
           <div class="col-5 col-md-4 col-lg-2 py-2 ms-2">
           <a href="{% url 'home:detail'  tag.id %}" class="d-flex h-100 pt-2 col-8 justify-content-center flex-column" style="text-decoration: none;">
