--- a/first_web/home/templates/home.html
+++ b/first_web/home/templates/home.html
@@ -1,9 +1,8 @@
 {% extends 'main.html' %} {% load static %} {% block title %}home{% endblock %} {% block body %}
 
-<body style="background: #16222A;  /* fallback for old browsers */
-background: -webkit-linear-gradient(to right, #3A6073, #16222A);  /* Chrome 10-25, Safari 5.1-6 */
-background: linear-gradient(to right, #3A6073, #16222A); /* W3C, IE 10+/ Edge, Firefox 16+, Chrome 26+, Opera 12+, Safari 7+ */
-">
+<body style="background: #232526; 
+background: -webkit-linear-gradient(to right, #414345, #232526);
+background: linear-gradient(to right, #414345, #232526);">
   <div style="height: 80vh;" class="d-flex justify-content-center align-items-end">
     <div id="carouselExampleCaptions" class="carousel slide" style="width: 80vw;height: 70vh;">
       <div class="carousel-indicators">
