--- a/first_web/home/templates/home.html
+++ b/first_web/home/templates/home.html
@@ -1,8 +1,8 @@
 {% extends 'main.html' %} {% load static %} {% block title %}home{% endblock %} {% block body %}
 
-<body style="background: #232526; 
-background: -webkit-linear-gradient(to right, #414345, #232526);
-background: linear-gradient(to right, #414345, #232526);">
+<body style="background: #1c1e1f; 
+background: -webkit-linear-gradient(to right, #38393b, #1c1e1f);
+background: linear-gradient(to right, #38393b, #1c1e1f);">
   <div style="height: 80vh;" class="d-flex justify-content-center align-items-end">
     <div id="carouselExampleCaptions" class="carousel slide" style="width: 80vw;height: 70vh;">
       <div class="carousel-indicators">
