--- a/first_web/accounts/templates/accounts/profile.html
+++ b/first_web/accounts/templates/accounts/profile.html
@@ -1,19 +1,121 @@
 {% extends 'main.html' %}
+{% load static %}
 {% block title %}profile{% endblock %}
 {% block body %}
-<div class="container-fluid">
-  
+<head>
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.8.1/css/all.min.css"
+      integrity="sha512-gMjQeDaELJ0ryCI+FtItusU9MkAifCZcGq789FrzkiM49D8lbDhoaUaIX4ASU187wofMNlgBJ4ckbrXM9sE6Pg=="
+      crossorigin="anonymous" referrerpolicy="no-referrer" />
+    <link href="https://fonts.googleapis.com/icon?family=Material+Icons" rel="stylesheet">
+    <link rel='stylesheet'
+   href='https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css'>
+   <!-- <link rel="stylesheet"
+href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.4.0/css/all.min.css"> -->
+  </head>
+  <body>
+    <!-- md to down -->
+       <div class="position-relative d-md-none" style="height: 40vw">
+        <div style="clip-path: polygon(0% 0%, 100% 0%, 100% 15vw, 0% 40vw);
+    background: #00d2ff;background: -webkit-linear-gradient(to right, #3a7bd5, #00d2ff);
+    background: linear-gradient(to right, #3a7bd5, #00d2ff);position: absolute;width: 100%;height: 30vw;z-index: -1;"></div>
+    <div class="px-2 pt-1 d-flex justify-content-between">
+        <div>
+            <a href="{% url 'accounts:history' %}" style="text-decoration: none;"><i class='fas fa-shopping-bag text-white d-sm-none me-2'></i></a>
+            <a href="{% url 'accounts:favourite' %}" style="text-decoration: none;"><i class='far fa-heart text-white d-sm-none'></i></a>
+
+            <a href="{% url 'accounts:history' %}" style="text-decoration: none;"><i class='fas fa-shopping-bag fs-4 text-white d-none d-sm-inline-block me-2'></i></a>
+            <a href="{% url 'accounts:favourite' %}" style="text-decoration: none;"><i class='far fa-heart fs-4 text-white d-none d-sm-inline-block'></i></a>
+        </div>
+       <div>
+        <a href="{% url 'accounts:update' %}" style="text-decoration: none;"><i class='far fa-edit text-white fs-4 d-none d-sm-block'></i></a>
+        <a href="{% url 'accounts:update' %}" style="text-decoration: none;"><i class='far fa-edit text-white d-sm-none'></i></a>
+       </div>
+    </div>
+    <div class="ps-2 ps-sm-5 text-white" style="width: fit-content;display: inline-block;">
+        <p class="fw-bold fs-2 m-0">{{profile.user.username}}</p>
+        <p style="font-size: x-small;">{{profile.user.email}}</p>
+    </div>
+    <div class="position-absolute" style="right: 12vw;top: 5vw;">
+       <img src="{{profile.profile_image.url}}" style="width: 30vw;height: 30vw;" class="rounded-circle border border-white border-1 p-1">
+    </div>
 </div>
+    <!-- End md to down -->
+<!-- md to up -->
+<div class="d-none d-md-block mb-5" style="background: #00d2ff;background: -webkit-linear-gradient(to right, #3a7bd5, #00d2ff);
+background: linear-gradient(to right, #3a7bd5, #00d2ff);height: 10rem;">
+<div class="d-flex justify-content-between">
+    <div class="ps-2 ps-sm-5">
+ <div class="text-white" style="width: fit-content;display: inline-block;">
+    <p class="fw-bold fs-1 m-0">{{profile.user.username}}</p>
+    <p style="font-size: small;">{{profile.user.email}}</p>
+ </div>
+ <div class="d-none d-md-block">
+    <a href="{% url 'accounts:change' %}" class="btn btn-outline-light btn-lg">change password </a>
+</div>
+</div>
+ <div class="d-flex flex-column align-items-end me-3">
+        <a href="{% url 'accounts:update' %}" style="text-decoration: none;" class="text-white py-2"><span>Edit Profile</span> <i class='far fa-edit fs-4'></i></a>
+        <a href="{% url 'accounts:favourite' %}" style="text-decoration: none;" class="text-white py-2"><span>Favourite</span> <i class='far fa-heart fs-4'></i></a>
+        <a href="{% url 'accounts:history' %}" style="text-decoration: none;" class="text-white py-2"><span>Orders</span> <i class='fas fa-shopping-bag fs-4'></i></a>
+    </div>
+</div>
+    <div style="position: absolute;top: 8rem;left: 43%;right: 43%;">
+        <img src="{{profile.profile_image.url}}" style="width: 10rem;height: 10rem;" class="rounded-circle border border-white border-4">
+     </div>
+</div>
+    <!-- End md to up -->
+<!-- info -->
+<div class="container d-flex flex-column justify-content-center">
+    <div class="d-flex flex-column mt-5">
+        <div class="d-flex my-2">
+        <div class="rounded-circle border d-flex justify-content-center align-items-center me-4" style="width: 3.5rem;height: 3.5rem;
+            box-shadow: 0px 0px 30px -6px rgba(0,0,0,1);">
+                <i class='fa fa-user-o text-warning p-2' style="font-size: 1.5rem;"></i>
+            </div>
+        <div>
+            <div>
+                <p class="m-0 text-muted" style="font-size: small;">User Name</p>
+                <p class="m-0 fw-bolder fs-6">{{profile.user.username}}</p>
+            </div>
+        </div>
+        </div>
+        <div class="my-2" style="display: grid;grid-template-columns: 5rem 70vw;">
+            <div class="rounded-circle border d-flex justify-content-center align-items-center align-self-center" style="width: 3.5rem;height: 3.5rem;
+            box-shadow: 0px 0px 30px -6px rgba(0,0,0,1);">
+                <i class='far fa-address-book p-2' style="font-size: 1.5rem;color: rgb(255, 132, 154);"></i>
+            </div>
+            <div>
+                <p class="m-0 text-muted" style="font-size: small;">Address</p>
+                <p class="m-0 fw-bolder fs-6">{{profile.address}}</p>
+            </div>
+        </div>
+        <div class="d-flex my-2">
+            <div class="rounded-circle border d-flex justify-content-center align-items-center me-4" style="width: 3.5rem;height: 3.5rem;
+            box-shadow: 0px 0px 30px -6px rgba(0,0,0,1);">
+              <i class="fa fa-phone p-2 text-success" style="font-size: 1.5rem;"></i>
+            </div>
+            <div>
+                <p class="m-0 text-muted" style="font-size: small;">Phone</p>
+                <p class="m-0 fw-bolder fs-6">{{profile.phone}}</p>
+            </div>
+        </div>
+    </div>
+    <div class="d-flex flex-column align-items-center my-3 d-md-none">
+        <a href="{% url 'accounts:change' %}" class="btn btn-outline-dark col-10">change password </a>
+    </div>
+</div>
+<!-- Endinfo -->
 {% comment %} <h1>profile</h1>
-<img src="{{profile.profile_image.url}}" style="width: 80px; height: 65px; border-radius: 100%;">
 <p>user name: {{profile.user.username}}</p>
 <p>first name: {{profile.user.first_name}}</p>
 <p>last name: {{profile.user.last_name}}</p>
 <p>phone: {{profile.phone}}</p>
 <p>address: {{profile.address}}</p>
-<a href="{% url 'accounts:update' %}">update </a>
 <a href="{% url 'accounts:change' %}">change password </a>
 <a href="{% url 'accounts:history' %}"> history </a>
 <a href="{% url 'accounts:favourite' %}"> favourite </a>
+<a href="{% url 'accounts:update' %}">update </a>
 {% endcomment %}
+<script src="{% static 'profile.js' %}"></script>
+</body>
 {% endblock %}
