--- a/first_web/accounts/templates/accounts/update.html
+++ b/first_web/accounts/templates/accounts/update.html
@@ -1,11 +1,24 @@
 {% extends 'main.html' %}
+{% load static %}
 {% block title %}update{% endblock %}
 {% block body %}
-<h1>update profile</h1>
-<form action="" method="post" enctype="multipart/form-data">
-    {% csrf_token %}
-    {{ user_form.as_p}}
-    {{ profile_form.as_p}}
-    <button type="submit">submit</button>
-</form>
+<head>
+  <link rel="stylesheet" href="{% static 'update.css' %}" />
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.8.1/css/all.min.css"
+      integrity="sha512-gMjQeDaELJ0ryCI+FtItusU9MkAifCZcGq789FrzkiM49D8lbDhoaUaIX4ASU187wofMNlgBJ4ckbrXM9sE6Pg=="
+      crossorigin="anonymous" referrerpolicy="no-referrer" />
+    <link href="https://fonts.googleapis.com/icon?family=Material+Icons" rel="stylesheet">
+    <link rel='stylesheet'
+   href='https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css'>
+</head>
+<body>
+    <h1>update profile</h1>
+    <form action="" method="post" enctype="multipart/form-data">
+        <img src="{{request.user.profile.profile_image.url}}" style="width: 50px;height: 50px;" alt="">
+        {% csrf_token %}
+        {{ user_form.as_p}}
+        {{ profile_form.as_p}}
+        <button type="submit">submit</button>
+    </form>
+</body>
 {% endblock %}
