--- a/first_web/templates/main.html
+++ b/first_web/templates/main.html
@@ -1,81 +1,63 @@
 <!DOCTYPE html>
 <html lang="en">
-  <head>
-    {% load bootstrap5 %} {% bootstrap_css %} {% bootstrap_javascript %}
-    <meta charset="UTF-8" />
-    <script src="https://cdn.jsdelivr.net/npm/chart.js" defer ></script>
-    <meta http-equiv="X-UA-Compatible" content="IE=edge" />
-    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.4.0/css/all.min.css" integrity="sha512-iecdLmaskl7CVkqkXNQ/ZH/XLlvWZOJyj7Yy7tcenmpD1ypASozpmT/E0iPtmFIB46ZmdtAc9eNBvH0H/ZpiBw==" crossorigin="anonymous" referrerpolicy="no-referrer" />
-    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>{% block title %}home{% endblock %}</title>
-  </head>
-  <body>
-    <nav class="navbar navbar-expand-lg navbar-light bg-dark">
-      <div class="container-fluid">
-        <button
-          class="navbar-toggler"
-          type="button"
-          data-bs-toggle="collapse"
-          data-bs-target="#navbarNavAltMarkup"
-          aria-controls="navbarNavAltMarkup"
-          aria-expanded="false"
-          aria-label="Toggle navigation"
-        >
-          <span class="navbar-toggler-icon"></span>
-        </button>
-        <div class="collapse navbar-collapse" id="navbarNavAltMarkup">
-          <div class="navbar-nav">
-            <a
-              class="nav-link active text-light"
-              aria-current="page"
-              href="{% url 'home:home' %}"
-              >Home</a
-            >
-            <a
-              class="nav-link active text-light"
-              aria-current="page"
-              href="{% url 'home:product' %}"
-              >product</a
-            >
-            {% if user.is_authenticated %}
-            <a class="nav-link text-light" href="{% url 'accounts:logout' %}">logout</a>
-            {% else %}
-            <a class="nav-link text-light" href="{% url 'accounts:login' %}">login</a>
-            <a class="nav-link text-light" href="{% url 'accounts:user_register' %}"
-              >sign in</a
-            >
-            {% endif %}
-            <a class="nav-link text-light" href="{% url 'accounts:profile' %}"><img
-              src="{{request.user.profile.profile_image.url}}"
-              alt=""
-              style="width: 3rem; height: 3rem; border: 1px solid black"
-              class="rounded-circle img-fluid"
-            /></a>
-            <a class="nav-link text-light" href="{% url 'cart:cart_detail' %}">cart</a>
-            {% comment %} <a class="nav-link text-light" href="{% url 'home:contact' %}">contact us</a> {% endcomment %}
+
+<head>
+  {% load bootstrap5 %} {% bootstrap_css %} {% bootstrap_javascript %}
+  <meta charset="UTF-8" />
+  <script src="https://cdn.jsdelivr.net/npm/chart.js" defer></script>
+  <meta http-equiv="X-UA-Compatible" content="IE=edge" />
+  <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.4.0/css/all.min.css"
+    integrity="sha512-iecdLmaskl7CVkqkXNQ/ZH/XLlvWZOJyj7Yy7tcenmpD1ypASozpmT/E0iPtmFIB46ZmdtAc9eNBvH0H/ZpiBw=="
+    crossorigin="anonymous" referrerpolicy="no-referrer" />
+  <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+  <title>{% block title %}home{% endblock %}</title>
+</head>
+<body>
+  <nav class="navbar-expand navbar-light bg-dark">
+    <div class="container-fluid">
+      <div class="collapse navbar-collapse" id="navbarNavAltMarkup">
+        <div class="navbar-nav d-flex justify-content-between w-100 align-items-center">
+          <div class="d-flex align-items-center">
+          <a class="nav-link active text-light" aria-current="page" href="{% url 'home:home' %}">Home</a>
+          <a class="nav-link active text-light" aria-current="page" href="{% url 'home:product' %}">Product</a>
+          {% if user.is_authenticated %}
+          <a class="nav-link text-primary" href="{% url 'cart:cart_detail' %}"><i class='fas fa-shopping-cart'></i></a>
+          {% endif %}
+        </div>
+          {% if user.is_authenticated %}
+          <div class="d-flex align-items-center">
+            <a class="nav-link text-light" href="{% url 'accounts:profile' %}">
+              <img src="{{request.user.profile.profile_image.url}}" alt=""
+                style="width: 3rem; height: 3rem; border: 2px solid white" class="rounded-circle img-fluid" />
+            </a>
+            <a class="nav-link text-light" href="{% url 'accounts:logout' %}"><i class='fas fa-sign-out-alt text-danger'></i></a>
           </div>
+          {% else %}
+          <div class="d-flex align-items-center">
+            <a class="nav-link text-light" href="{% url 'accounts:login' %}">Login</a>
+            <a class="nav-link text-light" href="{% url 'accounts:user_register' %}"><i class='fas fa-sign-in-alt'></i></a>
+          </div>
+          {% endif %}
+          {% comment %} <a class="nav-link text-light" href="{% url 'home:contact' %}">contact us</a> {% endcomment %}
         </div>
       </div>
-    </nav>
-    <body>
-      {% block body %} {% endblock %}
-    </body>
-    <script
-      src="https://code.jquery.com/jquery-3.3.1.slim.min.js"
-      integrity="sha384-q8i/X+965DzO0rT7abK41JStQIAqVgRVzpbzo5smXKp4YfRvH+8abtTE1Pi6jizo"
-      crossorigin="anonymous"
-    ></script>
-    <script
-      src="https://cdn.jsdelivr.net/npm/popper.js@1.14.7/dist/umd/popper.min.js"
-      integrity="sha384-UO2eT0CpHqdSJQ6hJty5KVphtPhzWj9WO1clHTMGa3JDZwrnQq4sF86dIHNDz0W1"
-      crossorigin="anonymous"
-    ></script>
-    <script
-      src="https://cdn.jsdelivr.net/npm/bootstrap@4.3.1/dist/js/bootstrap.min.js"
-      integrity="sha384-JjSmVgyd0p3pXB1rRibZUAYoIIy6OrQ6VrjIEaFf/nJGzIxFDsf4x0xIM+B07jRM"
-      crossorigin="anonymous"
-    ></script>
-    {% block scripts %}{% endblock %}
-    {% include 'message.html' %}
+    </div>
+  </nav>
+
+  <body>
+    {% block body %} {% endblock %}
   </body>
+  <script src="https://code.jquery.com/jquery-3.3.1.slim.min.js"
+    integrity="sha384-q8i/X+965DzO0rT7abK41JStQIAqVgRVzpbzo5smXKp4YfRvH+8abtTE1Pi6jizo"
+    crossorigin="anonymous"></script>
+  <script src="https://cdn.jsdelivr.net/npm/popper.js@1.14.7/dist/umd/popper.min.js"
+    integrity="sha384-UO2eT0CpHqdSJQ6hJty5KVphtPhzWj9WO1clHTMGa3JDZwrnQq4sF86dIHNDz0W1"
+    crossorigin="anonymous"></script>
+  <script src="https://cdn.jsdelivr.net/npm/bootstrap@4.3.1/dist/js/bootstrap.min.js"
+    integrity="sha384-JjSmVgyd0p3pXB1rRibZUAYoIIy6OrQ6VrjIEaFf/nJGzIxFDsf4x0xIM+B07jRM"
+    crossorigin="anonymous"></script>
+  {% block scripts %}{% endblock %}
+  {% include 'message.html' %}
+</body>
+
 </html>
