--- a/first_web/accounts/templates/accounts/register.html
+++ b/first_web/accounts/templates/accounts/register.html
@@ -26,7 +26,7 @@
         method="post"
       >
         {%csrf_token%} {{form}}
-        <input type="submit" value="Sign In" />
+        <input type="submit" value="Sign In" class="btn btn-outline-dark" />
       </form>
       <p>
         have an account ?
