--- a/first_web/home/static/product.css
+++ b/first_web/home/static/product.css
@@ -128,6 +128,10 @@ a{
     color:inherit!important;
 }
 @media screen and (max-width:991px){
+    #id_search{
+        color: white;
+        border:1px solid white;
+    }    
     input[type="submit"]{
         border: 0;
         background-color: white;
@@ -154,8 +158,9 @@ a{
 }
 @media screen and (min-width:992px){
     input[type="submit"]{
-        background-color: white;
-        border:0
+        background-color: rgba(0, 0, 0, 0);
+        border:0;
+        color: white;
     }
     #id_brand,
     #id_color{
@@ -168,7 +173,9 @@ a{
 
 }
 #id_search{
-    width:15vw
+    width:15vw;
+    color: black;
+    border:1px solid black;
 }
 }
 .category-container:first-child{
@@ -187,5 +194,5 @@ label[for = "id_search"]{
     border-radius:.5rem;
     padding: .35rem 0;
     padding-left: .4rem;
-    border:1px solid black
+    background-color: rgba(0, 0, 0, 0);
 }
