--- a/first_web/home/templates/detail.html
+++ b/first_web/home/templates/detail.html
@@ -2,14 +2,18 @@
 {% block body %}
 <head>
   {% load jformat %}
+  <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-EVSTQN3/azprG1Anm3QDgpJLIm9Nao0Yz1ztcQTwFspd3yD65VohhpuuCOmLASjC"
+  crossorigin="anonymous">
   <link rel="stylesheet" href="{% static 'detail.css' %}" />
   <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.8.1/css/all.min.css"
     integrity="sha512-gMjQeDaELJ0ryCI+FtItusU9MkAifCZcGq789FrzkiM49D8lbDhoaUaIX4ASU187wofMNlgBJ4ckbrXM9sE6Pg=="
     crossorigin="anonymous" referrerpolicy="no-referrer" />
   <link href="https://fonts.googleapis.com/icon?family=Material+Icons" rel="stylesheet">
 </head>
-<body>
-  <div class="mt-3 d-flex flex-column flex-md-row">
+<body style="background: #1c1e1f; 
+background: -webkit-linear-gradient(to right, #38393b, #1c1e1f);
+background: linear-gradient(to right, #38393b, #1c1e1f);">
+  <div class="mt-3 d-flex flex-column flex-md-row text-white">
     <!-- shortcut -->
     <!-- md to down -->
     <div class="d-flex d-md-none col-10 offset-2 mb-3">
@@ -19,18 +23,18 @@
           <i class="fa fa-heart" style="color: red; font-size: 1.5rem" data-bs-toggle="tooltip" data-bs-placement="top" title="favourite"></i></a>
         {% else %}
         <a href="{% url 'home:favourite' products.id %}">
-          <i class="far fa-heart" style="color: black; font-size: 1.5rem" data-bs-toggle="tooltip" data-bs-placement="top" title="favourite"></i></a>
+          <i class="far fa-heart text-white" style="font-size: 1.5rem" data-bs-toggle="tooltip" data-bs-placement="top" title="favourite"></i></a>
         {% endif %}
       </div>
       <div class="fs-4">/</div>
       <div class="mx-3 d-flex align-items-end">
         <form action="{% url 'cart:compare' products.id %}">
           <input class="d-none" type="text" name="product" value="{{product.id}}" />
-          <button type="submit" class="border-0 bg-white" data-bs-toggle="tooltip" data-bs-placement="top" title="compare">
+          <button type="submit" class="border-0" style="background-color: rgba(0,0,0,0);" data-bs-toggle="tooltip" data-bs-placement="top" title="compare">
             <svg style="cursor: pointer;" height="25" viewBox="0 0 16 16" width="24" xmlns="http://www.w3.org/2000/svg">
               <path
                 d="m1758 245c.55228 0 1 .447715 1 1v1h6c.55228 0 1 .447715 1 1v10c0 .552285-.44772 1-1 1h-6v1c0 .552285-.44772 1-1 1s-1-.447715-1-1v-1h-3v-2h3v-8h-3v-2h3v-1c0-.552285.44772-1 1-1zm-6 10v2h1v2h-2c-.55228 0-1-.447715-1-1v-3zm7 2h5v-8h-5zm-7-5v2h-2v-2zm1-5v2h-1v2h-2v-3c0-.552285.44772-1 1-1z"
-                fill="#293040" transform="translate(-1750 -245)" />
+                fill="white" transform="translate(-1750 -245)" />
             </svg>
           </button>
         </form>
@@ -44,24 +48,24 @@
     <!--End md to down -->
     <!-- md to up -->
     <div class="d-none d-md-flex col-1 flex-column align-items-center">
-      <div class="border px-3 rounded-4 py-2">
+      <div class="border px-3 py-2" style="border-radius: .4rem;">
       <div class="border-bottom my-3 d-flex justify-content-center px-2 pb-1" style="width: 24px;">
         {% if is_favourite %}
         <a href="{% url 'home:favourite' products.id %}">
           <i class="fa fa-heart" style="color: red; font-size: 1.5rem" data-bs-toggle="tooltip" data-bs-placement="top" title="favourite"></i></a>
         {% else %}
         <a href="{% url 'home:favourite' products.id %}">
-          <i class="far fa-heart" style="color: black; font-size: 1.5rem" data-bs-toggle="tooltip" data-bs-placement="top" title="favourite"></i></a>
+          <i class="far fa-heart text-white" style="font-size: 1.5rem" data-bs-toggle="tooltip" data-bs-placement="top" title="favourite"></i></a>
         {% endif %}
       </div>
       <div class="border-bottom my-3 d-flex justify-content-center px-2 pb-1" style="width: 24px;">
         <form action="{% url 'cart:compare' products.id %}">
           <input class="d-none" type="text" name="product" value="{{product.id}}" />
-          <button type="submit" class="border-0 bg-white" data-bs-toggle="tooltip" data-bs-placement="top" title="compare">
+          <button type="submit" class="border-0" style="background-color: rgba(0, 0, 0, 0);" data-bs-toggle="tooltip" data-bs-placement="top" title="compare">
             <svg style="cursor: pointer;" height="25" viewBox="0 0 16 16" width="24" xmlns="http://www.w3.org/2000/svg">
               <path
                 d="m1758 245c.55228 0 1 .447715 1 1v1h6c.55228 0 1 .447715 1 1v10c0 .552285-.44772 1-1 1h-6v1c0 .552285-.44772 1-1 1s-1-.447715-1-1v-1h-3v-2h3v-8h-3v-2h3v-1c0-.552285.44772-1 1-1zm-6 10v2h1v2h-2c-.55228 0-1-.447715-1-1v-3zm7 2h5v-8h-5zm-7-5v2h-2v-2zm1-5v2h-1v2h-2v-3c0-.552285.44772-1 1-1z"
-                fill="#293040" transform="translate(-1750 -245)" />
+                fill="white" transform="translate(-1750 -245)" />
             </svg>
           </button>
         </form>
@@ -149,10 +153,10 @@
         <div style="position: absolute;height: 60vh;z-index: 1;"
           class="col-10 col-md-6 d-flex justify-content-between align-items-center">
           <div style="display: flex;align-items: center;height: 60vh;cursor: pointer;" class="ps-3 pe-4 prev">
-            <i class="fa fa-chevron-left fs-3"></i>
+            <i class="fa fa-chevron-left fs-3 text-dark"></i>
           </div>
           <div style="display: flex;align-items: center;height: 60vh;cursor: pointer;" class="ps-4 pe-3 next">
-            <i class="fa fa-chevron-right fs-3"></i>
+            <i class="fa fa-chevron-right fs-3 text-dark"></i>
           </div>
         </div>
         <div style="position: relative;">
@@ -162,7 +166,7 @@
          </div> 
         </div>
       </div>
-      <div class="d-flex" style="overflow-x: auto;" id="scrollbar1">
+      <div class="d-flex" style="overflow-x: auto;background-color: white;" id="scrollbar1">
         <img src="{{products.image.url}}" alt="" class="border my-2 mx-2 rounded-3 images"
           style="width: 10vw;height:15vh;cursor: pointer;" />
         {% for img in image %}
@@ -218,24 +222,24 @@
   {% endif %}
         <!-- End color -->
     <!-- like & unlike -->
-    <div class="border col-4 rounded-5 d-flex align-self-end" style="height: 3rem;">
+    <div class="border col-4 d-flex align-self-end" style="height: 3rem;border-radius: .5rem;">
       {% if request.user.is_authenticated %}
-      <div class="border-end d-flex align-items-center justify-content-center py-2 rounded-start-5" style="flex-grow: 1;">
+      <div class="border-end d-flex align-items-center justify-content-center py-2" style="flex-grow: 1;border-top-left-radius: .5rem;border-bottom-left-radius: .5rem;">
       {% if is_like %}
       <a href="{% url 'home:product_like'  products.id %}"
-        class="{% if is_unlike %}disabled{% endif %}"><i class="fas fa-thumbs-up text-black fs-5 piss"></i></a>
+        class="{% if is_unlike %}disabled{% endif %}"><i class="fas fa-thumbs-up text-white fs-5 piss"></i></a>
       {% else %}
       <a href="{% url 'home:product_like' products.id %}"
-        class="{% if is_unlike %}disabled{% endif %}"><i class="far fa-thumbs-up text-black fs-5"></i></a>
+        class="{% if is_unlike %}disabled{% endif %}"><i class="far fa-thumbs-up text-white fs-5"></i></a>
       {% endif %}
     </div>
-    <div class="d-flex align-items-center justify-content-center py-2 rounded-end-5" style="flex-grow: 1;"> 
+    <div class="d-flex align-items-center justify-content-center py-2" style="flex-grow: 1;border-top-right-radius: .5rem;border-bottom-right-radius: .5rem;"> 
       {% if is_unlike %}
       <a href="{% url 'home:product_unlike' products.id %}"
-       class="{% if is_like %}disabled{% endif %}"><i class="fas fa-thumbs-down text-black fs-5 dis" style="transform: scaleX(-1);"></i></a>
+       class="{% if is_like %}disabled{% endif %}"><i class="fas fa-thumbs-down text-white fs-5 dis" style="transform: scaleX(-1);"></i></a>
       {% else %}
       <a href="{% url 'home:product_unlike' products.id  %}"
-        class="{% if is_like %}disabled{% endif %}"><i class="far fa-thumbs-down text-black fs-5" style="transform: scaleX(-1);"></i></a>
+        class="{% if is_like %}disabled{% endif %}"><i class="far fa-thumbs-down text-white fs-5" style="transform: scaleX(-1);"></i></a>
         {% endif %}
       </div> 
       {% endif %}
@@ -316,7 +320,7 @@
       {% csrf_token %} {% for data in variant %}
       <input type="radio" class="btn-check" autocomplete="off" value="{{data.id}}" 
       {% if variants.id == data.id %} checked {% endif %} name='select' onchange="this.form.submit();">
-    <label class="label rounded-circle btn d-flex ms-2 justify-content-center align-items-center" style="border: 1px solid black;">{{ data.color_variant }}</label>
+    <label class="label rounded-circle btn d-flex ms-2 justify-content-center align-items-center" style="border: 2px solid white;">{{ data.color_variant }}</label>
       {% endfor %} 
     </div>
   </form>
@@ -324,24 +328,24 @@
   {% endif %}
   <!-- End color -->
   <!-- like & unlike -->
-  <div class="border col-4 rounded-5 d-flex align-self-end" style="height: 3rem;">
+  <div class="border col-4 d-flex align-self-end" style="height: 3rem;border-radius: .5rem;">
     {% if request.user.is_authenticated %}
-    <div class="border-end d-flex align-items-center justify-content-center py-2 rounded-start-5" style="flex-grow: 1;">
+    <div class="border-end d-flex align-items-center justify-content-center py-2" style="flex-grow: 1;border-top-left-radius: .5rem;border-bottom-left-radius: .5rem;">
     {% if is_like %}
     <a href="{% url 'home:product_like'  products.id %}"
-      class="{% if is_unlike %}disabled{% endif %}"><i class="fas fa-thumbs-up text-black fs-5 piss"></i></a>
+      class="{% if is_unlike %}disabled{% endif %}"><i class="fas fa-thumbs-up text-white fs-5 piss"></i></a>
     {% else %}
     <a href="{% url 'home:product_like' products.id %}"
-      class="{% if is_unlike %}disabled{% endif %}"><i class="far fa-thumbs-up text-black fs-5"></i></a>
+      class="{% if is_unlike %}disabled{% endif %}"><i class="far fa-thumbs-up text-white fs-5"></i></a>
     {% endif %}
   </div>
-  <div class="d-flex align-items-center justify-content-center py-2 rounded-end-5" style="flex-grow: 1;"> 
+  <div class="d-flex align-items-center justify-content-center py-2" style="flex-grow: 1;border-top-right-radius: .5rem;border-bottom-right-radius: .5rem;"> 
     {% if is_unlike %}
     <a href="{% url 'home:product_unlike' products.id %}"
-     class="{% if is_like %}disabled{% endif %}"><i class="fas fa-thumbs-down text-black fs-5 dis" style="transform: scaleX(-1);"></i></a>
+     class="{% if is_like %}disabled{% endif %}"><i class="fas fa-thumbs-down text-white fs-5 dis" style="transform: scaleX(-1);"></i></a>
     {% else %}
     <a href="{% url 'home:product_unlike' products.id  %}"
-      class="{% if is_like %}disabled{% endif %}"><i class="far fa-thumbs-down text-black fs-5" style="transform: scaleX(-1);"></i></a>
+      class="{% if is_like %}disabled{% endif %}"><i class="far fa-thumbs-down text-white fs-5" style="transform: scaleX(-1);"></i></a>
       {% endif %}
     </div> 
     {% endif %}
@@ -388,13 +392,13 @@
   <!-- End md to down -->
   </div>
   <div class="accordion accordion-flush col-10 offset-1 my-5" id="accordionFlushExample">
-    <div class="accordion-item">
+    <div class="accordion-item mb-4" style="border-radius: .5rem;">
       <h2 class="accordion-header" id="flush-headingOne">
-        <button class="accordion-button collapsed" type="button" data-bs-toggle="collapse" data-bs-target="#flush-collapseOne" aria-expanded="false" aria-controls="flush-collapseOne">
+        <button class="accordion-button collapsed" style="border-radius: .5rem;" type="button" data-bs-toggle="collapse" data-bs-target="#flush-collapseOne" aria-expanded="false" aria-controls="flush-collapseOne">
           <h2 class="fw-bolder fs-3">Similar Products</h2>
         </button>
       </h2>
-      <div id="flush-collapseOne" class="accordion-collapse collapse" aria-labelledby="flush-headingOne" data-bs-parent="#accordionFlushExample">
+      <div id="flush-collapseOne" class="accordion-collapse collapse" aria-labelledby="flush-headingOne">
         <div class="accordion-body">
           <div class="d-flex border rounded-2" id="scrollbar1" style="overflow-y: hidden;">
           {% for tag in similar %}
@@ -409,14 +413,14 @@
         </div>
       </div>
     </div>
-    <div class="accordion-item">
+    <div class="accordion-item mb-4" style="border-radius: .5rem;">
       <h2 class="accordion-header" id="flush-headingTwo">
-        <button class="accordion-button collapsed d-flex" type="button" data-bs-toggle="collapse" data-bs-target="#flush-collapseTwo" aria-expanded="false" aria-controls="flush-collapseTwo">
+        <button class="accordion-button collapsed d-flex" style="border-radius: .5rem;" type="button" data-bs-toggle="collapse" data-bs-target="#flush-collapseTwo" aria-expanded="false" aria-controls="flush-collapseTwo">
           <h2 class="fw-bolder fs-3 me-5">Comment Users</h2>
           <span class="badge rounded-pill bg-secondary fs-6 m-0">{{com_num}}</span>
         </button>
       </h2>
-      <div id="flush-collapseTwo" class="accordion-collapse collapse" aria-labelledby="flush-headingTwo" data-bs-parent="#accordionFlushExample">
+      <div id="flush-collapseTwo" class="accordion-collapse collapse" aria-labelledby="flush-headingTwo">
         <div class="accordion-body">
           {%for com in comment %}
           <div class="p-2 container d-flex flex-column align-items-start">
@@ -450,7 +454,7 @@
                 <div class="col-10">
                 {%for data in com.comment_reply.all %}
                 <div class="reps mb-3" style="display: none;">
-                <div class="bg-secondary p-3 ps-1 rounded-4 d-flex">
+                <div class="bg-secondary p-3 ps-1 rounded-3 d-flex">
                 <div class="d-flex">
                   <img src="{{data.user.profile.profile_image.url}}" alt="" style="width: 3.5rem; height: 3.5rem; border: 1px solid black"
                   class="rounded-circle img-fluid" />
@@ -490,13 +494,13 @@
         </div>
       </div>
     </div>
-    <div class="accordion-item">
+    <div class="accordion-item" style="border-radius: .5rem;">
       <h2 class="accordion-header" id="flush-headingThree">
-        <button class="accordion-button collapsed" type="button" data-bs-toggle="collapse" data-bs-target="#flush-collapseThree" aria-expanded="false" aria-controls="flush-collapseThree">
+        <button class="accordion-button collapsed" style="border-radius: .5rem;" type="button" data-bs-toggle="collapse" data-bs-target="#flush-collapseThree" aria-expanded="false" aria-controls="flush-collapseThree">
           <h2 class="fw-bolder fs-3">Add Comment</h2>
         </button>
       </h2>
-      <div id="flush-collapseThree" class="accordion-collapse collapse" aria-labelledby="flush-headingThree" data-bs-parent="#accordionFlushExample">
+      <div id="flush-collapseThree" class="accordion-collapse collapse" aria-labelledby="flush-headingThree">
         <div class="accordion-body">
   
           {% if user.is_authenticated%}
