--- a/first_web/home/templates/product.html
+++ b/first_web/home/templates/product.html
@@ -2,21 +2,21 @@
 {% block body%}
 <link rel="stylesheet" href="{% static 'product.css' %}" />
 <link
-    rel="stylesheet"
-    href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.8.1/css/all.min.css"
-    integrity="sha512-gMjQeDaELJ0ryCI+FtItusU9MkAifCZcGq789FrzkiM49D8lbDhoaUaIX4ASU187wofMNlgBJ4ckbrXM9sE6Pg=="
-    crossorigin="anonymous"
-    referrerpolicy="no-referrer"
-  />
-<body style="background-color: white">
+rel="stylesheet"
+href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.8.1/css/all.min.css"
+integrity="sha512-gMjQeDaELJ0ryCI+FtItusU9MkAifCZcGq789FrzkiM49D8lbDhoaUaIX4ASU187wofMNlgBJ4ckbrXM9sE6Pg=="
+crossorigin="anonymous"
+referrerpolicy="no-referrer"
+/>
+<link href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-EVSTQN3/azprG1Anm3QDgpJLIm9Nao0Yz1ztcQTwFspd3yD65VohhpuuCOmLASjC" crossorigin="anonymous">
+<body style="background: #1c1e1f; 
+background: -webkit-linear-gradient(to right, #38393b, #1c1e1f);
+background: linear-gradient(to right, #38393b, #1c1e1f);">
    <div class="container-fluid d-lg-none">
     <div class="mt-4 pb-3 border-bottom d-sm-flex flex-sm-wrap flex-sm-row-reverse">
       <form method="post" action="product" class="d-flex col-sm-5 justify-content-sm-end justify-content-center mb-3 mb-sm-0">
         {% csrf_token %}
         <div class="d-flex align-items-end justify-content-between"> 
-          {% if 'search' in request.GET %}
-            {{ form }}
-          {% endif %}
           <div style="display: none">
             {{ filter.form.brand }}
             {{ filter.form.color }}
@@ -28,13 +28,14 @@
             <input type = "submit" name = "favourite" value="most_popular">
             <input type = "submit" name = "sell" value="most_sell">
           </div>
-        <button type="submit" class="btn btn-outline-dark ms-1"><i class="fa fa-search"></i></button>
+          {{form}}
+        <button type="submit" class="btn btn-outline-light ms-1"><i class="fa fa-search"></i></button>
       </div>
       </form>
       <div class="buttons d-flex col-sm-7 align-items-center justify-content-sm-start justify-content-center">
    <!-- filter -->
     <div class="filter mx-3">
-  <a style="cursor: pointer;" data-bs-toggle="offcanvas" data-bs-target="#offcanvasBottom" aria-controls="offcanvasBottom">
+  <a style="cursor: pointer;" class="text-white" data-bs-toggle="offcanvas" data-bs-target="#offcanvasBottom" aria-controls="offcanvasBottom">
    Filter <svg xmlns="http://www.w3.org/2000/svg" style="width: 25px;height:25px" fill="none" viewBox="0 0 24 24" stroke-width="1.5" stroke="currentColor" class="w-6 h-6">
     <path stroke-linecap="round" stroke-linejoin="round" d="M10.5 6h9.75M10.5 6a1.5 1.5 0 11-3 0m3 0a1.5 1.5 0 10-3 0M3.75 6H7.5m3 12h9.75m-9.75 0a1.5 1.5 0 01-3 0m3 0a1.5 1.5 0 00-3 0m-3.75 0H7.5m9-6h3.75m-3.75 0a1.5 1.5 0 01-3 0m3 0a1.5 1.5 0 00-3 0m-9.75 0h9.75" />
   </svg>
@@ -132,7 +133,7 @@
    <!-- Endfilter -->
     <!-- toolbox -->
     <div class="toolbox mx-3">
-      <a style="cursor: pointer;" data-bs-toggle="offcanvas" data-bs-target="#offcanvasBottom3" aria-controls="offcanvasBottom3">
+      <a style="cursor: pointer;" class="text-white" data-bs-toggle="offcanvas" data-bs-target="#offcanvasBottom3" aria-controls="offcanvasBottom3">
         Sort <svg xmlns="http://www.w3.org/2000/svg" width="24" height="24" fill="currentColor" class="bi bi-sort-down" viewBox="0 0 16 16">
           <path d="M3.5 2.5a.5.5 0 0 0-1 0v8.793l-1.146-1.147a.5.5 0 0 0-.708.708l2 1.999.007.007a.497.497 0 0 0 .7-.006l2-2a.5.5 0 0 0-.707-.708L3.5 11.293V2.5zm3.5 1a.5.5 0 0 1 .5-.5h7a.5.5 0 0 1 0 1h-7a.5.5 0 0 1-.5-.5zM7.5 6a.5.5 0 0 0 0 1h5a.5.5 0 0 0 0-1h-5zm0 3a.5.5 0 0 0 0 1h3a.5.5 0 0 0 0-1h-3zm0 3a.5.5 0 0 0 0 1h1a.5.5 0 0 0 0-1h-1z"/>
         </svg>
@@ -165,12 +166,11 @@
     <!-- Endtoolbox -->
     <!-- category -->
     <div class="category mx-3">
-      <a style="cursor: pointer;" data-bs-toggle="offcanvas" data-bs-target="#offcanvasBottom2" aria-controls="offcanvasBottom2">
+      <a style="cursor: pointer;" class="text-white" data-bs-toggle="offcanvas" data-bs-target="#offcanvasBottom2" aria-controls="offcanvasBottom2">
         Category <svg xmlns="http://www.w3.org/2000/svg" width="24" height="24" fill="currentColor" class="bi bi-watch" viewBox="0 0 16 16">
           <path d="M8.5 5a.5.5 0 0 0-1 0v2.5H6a.5.5 0 0 0 0 1h2a.5.5 0 0 0 .5-.5V5z"/>
           <path d="M5.667 16C4.747 16 4 15.254 4 14.333v-1.86A5.985 5.985 0 0 1 2 8c0-1.777.772-3.374 2-4.472V1.667C4 .747 4.746 0 5.667 0h4.666C11.253 0 12 .746 12 1.667v1.86a5.99 5.99 0 0 1 1.918 3.48.502.502 0 0 1 .582.493v1a.5.5 0 0 1-.582.493A5.99 5.99 0 0 1 12 12.473v1.86c0 .92-.746 1.667-1.667 1.667H5.667zM13 8A5 5 0 1 0 3 8a5 5 0 0 0 10 0z"/>
         </svg>
-        
         </a>
         <div class="offcanvas offcanvas-bottom" style="height: 90vh!important;" tabindex="-1" id="offcanvasBottom2" aria-labelledby="offcanvasBottom2Label">
           <div class="offcanvas-header">
@@ -320,7 +320,7 @@
 <div class="container-fluid d-none d-lg-block">
  <div class="d-flex flex-wrap my-5 justify-content-between">
   <div class="filters col-3 ms-3 mt-5" style="width: 22vw;">
-    <div class="border px-3 py-3 rounded-4">
+    <div class="border px-3 py-3 rounded-3 bg-white">
     <h3>Filters <svg xmlns="http://www.w3.org/2000/svg" style="width: 30px;height:30px" fill="none" viewBox="0 0 24 24" stroke-width="1.5" stroke="currentColor" class="w-6 h-6">
       <path stroke-linecap="round" stroke-linejoin="round" d="M10.5 6h9.75M10.5 6a1.5 1.5 0 11-3 0m3 0a1.5 1.5 0 10-3 0M3.75 6H7.5m3 12h9.75m-9.75 0a1.5 1.5 0 01-3 0m3 0a1.5 1.5 0 00-3 0m-3.75 0H7.5m9-6h3.75m-3.75 0a1.5 1.5 0 01-3 0m3 0a1.5 1.5 0 00-3 0m-9.75 0h9.75" />
     </svg></h3>
@@ -433,7 +433,7 @@
   <div class="col-9">
     <div class="toolbox px-3 pb-1 mb-3 border-bottom">
       <form action="">
-        <div class="toolbox-right">
+        <div class="toolbox-right text-white">
           <span><svg xmlns="http://www.w3.org/2000/svg" width="24" height="24" fill="currentColor" class="bi bi-sort-down" viewBox="0 0 16 16">
             <path d="M3.5 2.5a.5.5 0 0 0-1 0v8.793l-1.146-1.147a.5.5 0 0 0-.708.708l2 1.999.007.007a.497.497 0 0 0 .7-.006l2-2a.5.5 0 0 0-.707-.708L3.5 11.293V2.5zm3.5 1a.5.5 0 0 1 .5-.5h7a.5.5 0 0 1 0 1h-7a.5.5 0 0 1-.5-.5zM7.5 6a.5.5 0 0 0 0 1h5a.5.5 0 0 0 0-1h-5zm0 3a.5.5 0 0 0 0 1h3a.5.5 0 0 0 0-1h-3zm0 3a.5.5 0 0 0 0 1h1a.5.5 0 0 0 0-1h-1z"/>
           </svg> Sort :</span>
