--- a/first_web/templates/main.html
+++ b/first_web/templates/main.html
@@ -3,6 +3,8 @@
 
 <head>
   {% load bootstrap5 %} {% bootstrap_css %} {% bootstrap_javascript %}
+  <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-EVSTQN3/azprG1Anm3QDgpJLIm9Nao0Yz1ztcQTwFspd3yD65VohhpuuCOmLASjC"
+   crossorigin="anonymous">
   <meta charset="UTF-8" />
   <script src="https://cdn.jsdelivr.net/npm/chart.js" defer></script>
   <meta http-equiv="X-UA-Compatible" content="IE=edge" />
@@ -13,7 +15,9 @@
   <title>{% block title %}home{% endblock %}</title>
 </head>
 <body>
-  <nav class="navbar-expand navbar-light bg-dark">
+  <nav class="navbar-expand navbar-light border-bottom" style="background: #1c1e1f; 
+  background: -webkit-linear-gradient(to right, #38393b, #1c1e1f);
+  background: linear-gradient(to right, #38393b, #1c1e1f);">
     <div class="container-fluid">
       <div class="collapse navbar-collapse" id="navbarNavAltMarkup">
         <div class="navbar-nav d-flex justify-content-between w-100 align-items-center">
@@ -35,7 +39,7 @@
           {% else %}
           <div class="d-flex align-items-center">
             <a class="nav-link text-light" href="{% url 'accounts:login' %}">Login</a>
-            <a class="nav-link text-light" href="{% url 'accounts:user_register' %}"><i class='fas fa-sign-in-alt'></i></a>
+            <a class="nav-link text-light" href="{% url 'accounts:user_register' %}"><i class='fas fa-sign-in-alt text-success'></i></a>
           </div>
           {% endif %}
           {% comment %} <a class="nav-link text-light" href="{% url 'home:contact' %}">contact us</a> {% endcomment %}
